@@ -1,3 +1,9 @@
+linuxmuster-cachingserver-server (1.0.3-0) lmn72-testing; urgency=low
+
+  * update
+
+ -- Lukas Spitznagel <lukas.spitznagel@netzint.de>  Tue, 23 Feb 2023 17:28:00 +0200
+
 linuxmuster-cachingserver-server (1.0.2-0) lmn72-testing; urgency=low
 
   * fix error while install
